[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/titlescreen/MenuSeed.gd" type="Script" id=1]
[ext_resource path="res://ui/titlescreen/seed_1.png" type="Texture" id=2]
[ext_resource path="res://ui/titlescreen/seed_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=4]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Seed" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 0.8749
polygon = PoolVector2Array( -0.897435, 2.62187, -2.55994, -9.58574, 5.48433, -31.222, 29.3397, -71.9981, 64.2392, -108.756, 94.658, -134.358, 115.978, -148.431, 123.652, -141.9, 112.279, -120.818, 96.0756, -95.9783, 66.8167, -57.4514, 29.096, -16.428, 10.07, 0.624296 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 350.35, 53.8772 )
rotation = 0.867222
frames = SubResource( 1 )
frame = 1

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = -21.0
margin_right = 158.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_Seed_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Seed_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Seed_mouse_exited"]
